# agro-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  rust.yml
app/: __init__.py  config.py  exceptions.py  logging_setup.py  main.py
app/ai/: __init__.py  pipeline.py  species_classifier.py  thresholds.py
app/ai/detectors/: __init__.py  face_detector.py  muzzle_detector.py
app/ai/extractors/: __init__.py  feature_extractor.py
app/api/: __init__.py  animals.py  deps.py  stats.py
app/core/: __init__.py  accel.py
app/database/: __init__.py  base.py  models.py  repository.py  session.py  vector_db.py
app/schemas/: __init__.py  animal.py  common.py
app/utils/: __init__.py  ids.py  image_utils.py
data/: datasets.yaml
data/eval_smoke/: cattle_smoke.json
docs/: API.md  ARCHITECTURE.md  DATASETS.md  MODELS.md  NEXT_STEPS.md  ROADMAP.md  RUST_CORE.md
docs/eval_runs/: cattle_baseline_smoke.json
frontend/: __init__.py  app.py
frontend/lib/: __init__.py  api_client.py
frontend/pages/: 1_🆕_Register.py  2_🔍_Identify.py  3_📊_Statistics.py
notebooks/: finetune_baseline.ipynb
rust_core/: Cargo.toml  README.md
rust_core/crates/agroai_core/: Cargo.toml  pyproject.toml
rust_core/crates/agroai_core/benches/: benches.rs
rust_core/crates/agroai_core/src/: bbox.rs  errors.rs  hashing.rs  image_ops.rs  lib.rs  similarity.rs
rust_core/crates/agroai_core/tests/: test_bbox.rs  test_hashing.rs  test_image_ops.rs  test_similarity.rs
scripts/: dataset_status.py  download_datasets.py  download_models.py  eval_reid_baseline.py  reset_db.py  seed_demo_data.py  validate_datasets.py
tests/: conftest.py  test_api.py  test_detectors.py  test_health.py  test_id_generator.py  test_pipeline.py  test_repository.py  test_rust_integration.py  test_vector_store.py
