[workspace]
members = ["crates/agroai_core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["AgroAI Team"]

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["abi3-py311", "auto-initialize"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
image = { version = "=0.24.9", default-features = false, features = ["png", "jpeg", "webp"] }
sha2 = "0.10"
blake3 = "=1.5.5"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
wide = "0.7"
thiserror = "1"
criterion = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "=1.0.0"
tempfile = "=3.10.1"
