[package]
name = "agroai_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "agroai_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true
image.workspace = true
sha2.workspace = true
blake3.workspace = true
rayon.workspace = true
rayon-core.workspace = true
wide.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[features]
default = []
phash = []
extension-module = ["pyo3/extension-module"]

[[bench]]
name = "benches"
harness = false
