[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "agroai-core"
version = "0.1.0"
description = "Rust acceleration core for AgroAI"
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
]

[tool.maturin]
bindings = "pyo3"
module-name = "agroai_core"
features = ["extension-module"]

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "pp* *-musllinux*"
manylinux-x86_64-image = "manylinux2014"
test-command = "python -c \"import agroai_core; print(agroai_core.__version__)\""
